--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <br/><br/><br/>
 
-    <label for="text-val">Please enter required meeting date <br/> in format YYYYMMDD:</label>
+    <label for="text-val">Please enter required meeting date &#x1F5D3; <br/> in format YYYYMMDD:</label>
     <br/>
     <textarea id="text-val" rows="4">20211230</textarea>
     
